examples/negative/oneshot/resume_with_values_twice.kai
# Negative fixture (#511 / one-shot resume): same shape as
# resume_twice but the second resume passes a different value.
# Runtime panic is still mandatory — the continuation status
# check flips after the first call and aborts on the second.

effect Io { ask() : Int }

fn main() : Int {
  handle {
    let a = Io.ask()
    a + 1
  } with Io {
    ask(resume) -> {
      let v = resume(7)
      resume(11)
    }
    return(x) -> x
  }
}
